postgres-operator/calico-network-policy.yaml
# Allows HTTP traffic to communicate with the operator within the local cluster network

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: postgres-operator-ingress
  namespace: postgres-operator
spec:
  selector: app.kubernetes.io/instance contains 'postgres-operator'
  types:
    - Ingress
    - Egress
  ingress:
    # Allow all cluster namespaces to communciate with the operator to create/get resources (needed for the main postgres-operator service)
    - action: Allow
      metadata:
        annotations:
          from: all-namespaces
          to: unifi
      protocol: TCP
      source:
        namespaceSelector: has(projectcalico.org/name)
      destination:
        ports:
          - 8080
    # Allow UI traffic coming in from the Nginx ingress controller
    - action: Allow
      metadata:
        annotations:
          from: ingress-nginx
          to: unifi
      protocol: TCP
      source:
        namespaceSelector: app.kubernetes.io/instance == 'ingress-nginx'
      destination:
        ports:
          - 80
          - 443
  egress:
    - action: Allow
